Clarift ABI write order and rename registers in state table.
 On branch dev/spec-draft-5
 Changes to be committed:
	modified:   docs/crypto-ise.changelog.tex
	modified:   docs/crypto-ise.state.tex

--- a/docs/crypto-ise.changelog.tex
+++ b/docs/crypto-ise.changelog.tex
@@ -1,3 +1,10 @@
+\paragraph{Draft-5}
+\begin{itemize}
+\item Explicitly state order in which $\CPR$ registers are written to 
+    the stack.
+\item Rename registers in state table $cprX \Rightarrow cX$.
+\end{itemize}
+
 \paragraph{Draft-4}
 \begin{itemize}
 \item Add MIX.cr instruction.
