--- a/docs/crypto-ise.changelog.tex
+++ b/docs/crypto-ise.changelog.tex
@@ -3,6 +3,7 @@
 \item Explicitly state order in which $\CPR$ registers are written to 
     the stack.
 \item Rename registers in state table $cprX \Rightarrow cX$.
+\item Design notes about implementation specific RNG functions.
 \end{itemize}
 
 \paragraph{Draft-4}
