Describe feature sets and new feature CSR
- Add placeholder for new cisea CSR
- Add fields for the new cisef CSR
- Add description of ISE feature sets / partitions and how they
  can be mixed/matched/combined.
- Add labels to lots of sections.

--- a/docs/crypto-ise.changelog.tex
+++ b/docs/crypto-ise.changelog.tex
@@ -1,5 +1,6 @@
 \paragraph{Draft-5}
 \begin{itemize}
+\item Add {\tt cisef} CSR and describe ISE feature sets.
 \item Explicitly state order in which $\CPR$ registers are written to 
     the stack.
 \item Rename registers in state table $cprX \Rightarrow cX$.
