--- a/docs/crypto-ise.tex
+++ b/docs/crypto-ise.tex
@@ -31,6 +31,9 @@ Instruction Set Extension for the RISC-V Instruction Set Architecture.
 \section{ISE State}
 \import{./}{crypto-ise.state.tex}
 
+\section{ISE Feature Sets}
+\import{./}{crypto-ise.featuresets.tex}
+
 \section{Instruction Specifications}
 \import{./}{crypto-ise.specification.tex}
 
